--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   </section>
 
   <section class="panel map-wrap">
-    <div class="legend">20×17 グリッド（日本海側に出題表示）</div>
+    <div class="legend">20×17 グリッド</div>
     <div id="grid" class="grid" aria-label="日本の都道府県タイル地図">
       <div class="prompt-overlay">
         <!-- ふりがなを上、漢字を下 -->
