--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     // ステップメッセージを巡回
     const steps = [
       '部材を搬入中',
-      'フレームを組み立て中',
-      '配線・設定を最適化中',
+      '伊藤さん運だけだからなぁ',
+      '設定を最適化中',
       '仕上げに磨きをかけています'
     ];
     let i = 0; const stepEl = document.getElementById('step');
